--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "mysql2": "^3.10.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.16.2",
-    "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
